Fixed Some spacing

--- a/about.css
+++ b/about.css
@@ -48,8 +48,8 @@ div {
 }
 
 section {
-  padding: 0 40px;
-  padding-bottom: 20px;
+  padding: 80px 32px;
+  padding-bottom: 60px;
   margin: 0 auto;
 }
 
